--- a/Codigos/package.json
+++ b/Codigos/package.json
@@ -7,8 +7,8 @@
   },
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
     "json-server": "^0.17.3"
-  }
+  },
+  "description": ""
 }
